--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -1,34 +1,24 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Dashboard</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>
+      Dashboard
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
-      <ion-card>
-      <ion-card-header>
-        Weight Chart
-      </ion-card-header>
-      <ion-card-content>
-        <canvas #barCanvas></canvas>
-      </ion-card-content>
-    </ion-card>
- 
-    <ion-card>
-      <ion-card-header>
-        Health Chart
-      </ion-card-header>
-      <ion-card-content>
-        <canvas #lineCanvas></canvas>
-      </ion-card-content>
-    </ion-card>
- 
-    <ion-card>
-      <ion-card-header>
-        Overall Fitness
-      </ion-card-header>
-      <ion-card-content>
-        <canvas #doughnutCanvas></canvas>
-      </ion-card-content>
-    </ion-card>
+<ion-content>
+<ion-card>
+  <ion-card-content>
+  <div id="container"  ></div>
+</ion-card-content>
+</ion-card>
+
+<ion-card>
+  <ion-card-content>
+    <div id="container2" ></div>
+  </ion-card-content>
+</ion-card>
 </ion-content>
