--- a/src/app/signupform/signupform.page.html
+++ b/src/app/signupform/signupform.page.html
@@ -65,7 +65,7 @@
         </ion-item-group>
 
             
-        <ion-button [disabled]="!myForm.valid" type="submit" >Next</ion-button>
+        <ion-button [disabled]="!myForm.valid" type="submit" >Submit</ion-button>
             
         
     </form>
