--- a/src/app/goals/goals.page.html
+++ b/src/app/goals/goals.page.html
@@ -62,7 +62,7 @@
 
     
 
-      <ion-button [disabled]="!myForm.valid" type="submit" >Next</ion-button>
+      <ion-button [disabled]="!myForm.valid" type="submit" >Submit</ion-button>
       
 
 
