workout page update

--- a/src/app/workout/workout.page.html
+++ b/src/app/workout/workout.page.html
@@ -11,15 +11,21 @@
 
 <ion-content padding>
   <!-- <div class="col header">
-    <div class="row">{{workData</div>
-    <div class="row">Service Code</div>
-    <div class="row">Pay Limit</div>
-    <div class="row">Account Number to Use</div>
+    <div class="row">Date</div>
+    <div class="row">Workout type</div>
+    <div class="row">Activity Time (minutes)</div>
+    <div class="row">Activity Speed -kmph</div>
+    <div class="row">Recovery Time</div>
+    <div class="row">Recovery Speed -kmph</div>
+    <div class="row"># of repeats</div>
+    <div class="row">Total Time</div>
+
+  
   </div>
   <div class="col" >
-    <div class="row">{{data.name}}</div>
-    <div class="row">{{data.code}}</div>
-    <div class="row">LK {{data.limit}}</div>
-    <div class="row">{{data.account}}</div>
+    <div class="row"></div>
+    <div class="row"></div>
+    <div class="row">LK</div>
+    <div class="row"></div>
   </div> -->
 </ion-content>
