--- a/src/app/workout/workout.page.html
+++ b/src/app/workout/workout.page.html
@@ -10,22 +10,27 @@
 </ion-header>
 
 <ion-content padding>
-  <!-- <div class="col header">
-    <div class="row">Date</div>
-    <div class="row">Workout type</div>
-    <div class="row">Activity Time (minutes)</div>
-    <div class="row">Activity Speed -kmph</div>
-    <div class="row">Recovery Time</div>
-    <div class="row">Recovery Speed -kmph</div>
-    <div class="row"># of repeats</div>
-    <div class="row">Total Time</div>
-
-  
-  </div>
-  <div class="col" >
-    <div class="row"></div>
-    <div class="row"></div>
-    <div class="row">LK</div>
-    <div class="row"></div>
-  </div> -->
+<!-- 
+    <TABLE >
+      <TD>
+        <TR>Date</TR>
+        <TR>Workout Type</TR>
+        <TR>Activity Times-Minutes</TR>
+        <TR>Activity Speed-Kmph</TR>
+        <TR>Recovery Time-Minutes</TR>
+        <TR>Recovery Speed</TR>
+        <TR># of Repeats</TR>
+        <TR>Total Duration</TR>
+      </TD>
+      <TD>
+        <TR>cell 1</TR>
+        <TR>Cell 2</TR>
+        <TR>Cell 3</TR>
+        <TR>Cell 4</TR>
+        <TR>Cell 5</TR>
+        <TR>Cell 6</TR>
+        <TR>Cell 7</TR>
+        <TR>Cell 8</TR>
+      </TD>
+    </TABLE> -->
 </ion-content>
