workout page code update

--- a/src/app/workout/workout.page.html
+++ b/src/app/workout/workout.page.html
@@ -10,12 +10,13 @@
 </ion-header>
 
 <ion-content padding>
-<!-- 
+    <div><label>Item ID: </label></div>
+
     <TABLE >
       <TD>
         <TR>Date</TR>
         <TR>Workout Type</TR>
-        <TR>Activity Times-Minutes</TR>
+        <TR>Activity Time-Minutes</TR>
         <TR>Activity Speed-Kmph</TR>
         <TR>Recovery Time-Minutes</TR>
         <TR>Recovery Speed</TR>
@@ -23,14 +24,14 @@
         <TR>Total Duration</TR>
       </TD>
       <TD>
-        <TR>cell 1</TR>
-        <TR>Cell 2</TR>
-        <TR>Cell 3</TR>
-        <TR>Cell 4</TR>
-        <TR>Cell 5</TR>
-        <TR>Cell 6</TR>
-        <TR>Cell 7</TR>
-        <TR>Cell 8</TR>
+        <TR id = "date"></TR>
+        <TR id = "workout_type"></TR>
+        <TR id = "activity_time"></TR>
+        <TR id = "activity_speed"></TR>
+        <TR id = "recovery_time"></TR>
+        <TR id = "recovery_speed"></TR>
+        <TR id = "repeats"></TR>
+        <TR id = "duration"></TR>
       </TD>
-    </TABLE> -->
+    </TABLE>
 </ion-content>
