--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -11,7 +11,9 @@
   </div>
 
   <div id ="contentLine">
-    <p >Add a few lines for content</p>
+    <p>High Impact Lifestyle Coaching! </p>
+    <p>Lifestyle coaching by Aadit Life helps individuals and groups set meaningful wellness goals - and achieve them. 
+    </p>
   </div>
   
   <!-- <form (ngSubmit)="login()" [formGroup]="loginForm">
@@ -37,10 +39,14 @@
       </div>
 
       <!-- <ion-list> -->
-
+        <div class="row" >
+          <div class="col" >
         <button ion-button  class="loginBtn loginBtn--google" (click)="loginWithGoogle()">
           Log in with Google
         </button>
+        </div>
+        </div>
+        
       
         <!-- <ion-button class="register-btn" icon-right block clear (click)="signup()">
           <ion-icon name="person-add"></ion-icon>
