--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -75,3 +75,14 @@
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
 }
+ion-toolbar{
+  --background: linear-gradient(45deg, #49a09d, #5f2c82);
+}
+
+ion-content {
+  --height: 100%;
+  --margin: 0;
+  --background: linear-gradient(45deg, #49a09d, #5f2c82);
+  --font-family: sans-serif;
+  --font-weight: 100;
+}
