--- a/src/app/signupform/signupform.page.scss
+++ b/src/app/signupform/signupform.page.scss
@@ -1,15 +1,15 @@
-ion-toolbar {
-    --background: url('../../assets/images/bg.jpg') no-repeat 100% 100%;
-    } 
+// ion-toolbar {
+//     --background: url('../../assets/images/bg.jpg') no-repeat 100% 100%;
+//     } 
   
-ion-content {
-    --background: url('../../assets/images/bg.jpg') no-repeat 100% 100%;
-    }
+// ion-content {
+//     --background: url('../../assets/images/bg.jpg') no-repeat 100% 100%;
+//     }
 
-ion-scroll {
-    --background: url('../../assets/images/bg.jpg') no-repeat 100% 100%;
-    }
+// ion-scroll {
+//     --background: url('../../assets/images/bg.jpg') no-repeat 100% 100%;
+//     }
 
-ion-content ion-scroll {
-    --background: url('../../assets/images/bg.jpg');
-    }
+// ion-content ion-scroll {
+//     --background: url('../../assets/images/bg.jpg');
+//     }
