--- a/src/app/workout/workout.page.html
+++ b/src/app/workout/workout.page.html
@@ -54,5 +54,9 @@
 			</tr>
 		</tbody>
 	</table>
-</div>
+  </div>
+  <div class = "logbutton">
+    <ion-button (click)= "goToWorkoutLog()" >Workout Log</ion-button>
+    <ion-button (click)= "goToFoodLog()"  >Food Log</ion-button>
+  </div>
 </ion-content>
