--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -86,3 +86,6 @@ ion-content {
   --font-family: sans-serif;
   --font-weight: 100;
 }
+ion-footer {
+  --background: linear-gradient(45deg, #49a09d, #5f2c82);
+}
