--- a/src/app/workoutlog/workoutlog.page.html
+++ b/src/app/workoutlog/workoutlog.page.html
@@ -10,14 +10,13 @@
     <label  floating>Workout Type</label>
     <input type="text" formControlName="workout_type" required >
 
-    <ion-label  floating>Feedback</ion-label>
-      
-    <!-- <input type="text" formControlName="feedback" required > -->
-    <ion-button ion-fab><ion-icon name="logo-facebook"></ion-icon></ion-button>
+    <ion-label  floating>Feedback</ion-label> 
+    <textarea type="text" formControlName="feedback" required ></textarea>
+    <!-- <ion-button ion-fab><ion-icon name="logo-facebook"></ion-icon></ion-button>
     <ion-button ion-fab><ion-icon name="logo-twitter"></ion-icon></ion-button>
     <ion-button ion-fab><ion-icon name="logo-vimeo"></ion-icon></ion-button>
     <ion-button ion-fab><ion-icon name="logo-googleplus"></ion-icon></ion-button>
-  
+   -->
     <ion-label floating>Comment</ion-label>
     <input  type="text" formControlName="comment" style="height:200px"required >
 
